<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pop Squares</string>
    <string name="wallpaper_name">Pop Squares</string>
    <string name="wallpaper_description">A blatant ripoff of the Pop Squares XScreensaver hack.</string>
    <string name="settings_activity_title">Pop Squares Settings</string>
    <string name="help_activity_title">Pop Squares</string>

    <string name="button_close_app">use these settings</string>
    <string name="button_load">load</string>
    <string name="button_editor">back to editor</string>
    <string name="button_load_defaults">reset</string>
    <string name="button_save">save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_done">Cancel</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_open_wallpaper_picker">open wallpaper picker</string>
    <string name="button_open_settings">show Pop Squares settings</string>
    <string name="button_hide_from_launcher">hide Pop Squares from app launcher</string>

    <string name="help_welcome">Thank you for trying the Pop Squares live wallpaper!</string>
    <string name="help_what_is">As you may already know, this is not a regular app &#8212; it\'s a wallpaper! That means it works a little differently. If you want see Pop Squares on your home screen, you need to set it as your wallpaper. Press the button below, and select \"Pop Squares\" from the list to get up and running.</string>
    <string name="help_play_with_settings">You\'re also welcome to play around with things first. Click below if you want to kick the tires. This will NOT activate the wallpaper on your home screen.</string>
    <string name="help_hide_icon">We also realize you may not want the Pop Squares icon cluttering up your launcher, so you can press the button below to hide it. Note: you may have to reboot before the icon disappears.</string>

    <string name="label_row_count">x count:</string>
    <string name="label_column_count">y count:</string>
    <string name="label_strobe_fps">fps:</string>
    <string name="label_color">color:</string>
    <string name="label_squares">squares:</string>
    <string name="label_behavior">behavior:</string>
    <string name="label_contrast">contrast:</string>
    <string name="label_distance_per_scroll">scroll:</string>

    <string name="checkbox_low_priority">low priority</string>

    <string name="context_menu_title">Modify effect</string>

    <string name="invalid_name_title">Bad name</string>
    <string name="invalid_name_message">An effect name cannot be blank.</string>

    <string name="name_effect_title">New effect name</string>

    <string name="confirm_reset_title">Confirm reset</string>
    <string name="confirm_reset_message">Are you sure you want to reset to the default settings?</string>
    <string name="confirm_delete_title">Confirm delete</string>
    <string name="confirm_delete_message">Are you sure you want to delete \"%s?\"</string>
    <string name="confirm_replace_title">Confirm replace</string>
    <string name="confirm_replace_message">Are you sure you want to replace \"%s\" with your current settings?</string>

    <string name="library_init_title">Please wait</string>
    <string name="library_init_message">Initializing effect library.</string>

    <!-- prefs!! -->
    <string name="pref_row_count">pref_row_count</string>
    <string name="pref_column_count">pref_column_count</string>
    <string name="pref_red_amount">pref_red_amount</string>
    <string name="pref_green_amount">pref_green_amount</string>
    <string name="pref_blue_amount">pref_blue_amount</string>
    <string name="pref_strobe_fps">pref_strobe_fps</string>
    <string name="pref_contrast">pref_contrast</string>
    <string name="pref_distance_per_scroll">pref_distance_per_scroll</string>
    <string name="pref_built_in_profiles_added">pref_built_in_profiles_added</string>
    
    <string name="pref_size">pref_size</string> <!-- note: no longer used -->
</resources>
