<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1.0" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="8dp" >

        <!-- button header -->
        <LinearLayout
                style="@style/ButtonBar" >

            <Button
                style="@style/HeaderButton"
                android:id="@+id/LibraryButton"
                android:text="@string/button_load" />

            <Button
                style="@style/HeaderButton"
                android:id="@+id/SaveButton"
                android:text="@string/button_save" />

            <Button
                style="@style/HeaderButton"
                android:id="@+id/ResetButton"
                android:text="@string/button_load_defaults" />

        </LinearLayout>

        <!-- color -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" >

            <TextView
                style="@style/HeaderView"
                android:text="@string/label_color" />


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:padding="0dp"
                android:stretchColumns="1">

                <TableRow>
                    <TextView
                        style="@style/TableLayoutLabel"
                        android:text="red:" />

                    <SeekBar
                        style="@style/TableSeekBar"
                        android:id="@+id/RedAmountSeekBar" />

                </TableRow>

                <TableRow>
                    <TextView
                        style="@style/TableLayoutLabel"
                        android:text="green:" />

                    <SeekBar
                        style="@style/TableSeekBar"
                        android:id="@+id/GreenAmountSeekBar"/>

                </TableRow>
                <TableRow>
                    <TextView
                        style="@style/TableLayoutLabel"
                        android:text="blue:" />

                    <SeekBar
                        style="@style/TableSeekBar"
                        android:id="@+id/BlueAmountSeekBar"/>
                </TableRow>
                <TableRow>
                    <TextView
                        style="@style/TableLayoutLabel"
                        android:text="@string/label_contrast" />

                    <SeekBar
                        style="@style/TableSeekBar"
                        android:id="@+id/ContrastSeekBar"/>
                </TableRow>

            </TableLayout>

        </LinearLayout>

        <!-- shape -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" >

            <TextView
                style="@style/HeaderView"
                android:text="@string/label_squares" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:padding="0dp"
                android:stretchColumns="1">

                <TableRow>
                    <TextView
                        style="@style/TableLayoutLabel"
                        android:text="@string/label_column_count" />

                    <SeekBar
                        style="@style/TableSeekBar"
                        android:id="@+id/ColumnCountSeekBar" />
                </TableRow>
                <TableRow>
                    <TextView
                        style="@style/TableLayoutLabel"
                        android:text="@string/label_row_count" />

                    <SeekBar
                        style="@style/TableSeekBar"
                        android:id="@+id/RowCountSeekBar" />
                </TableRow>
            </TableLayout>
        </LinearLayout>


        <!-- behavior -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" >

            <TextView
                style="@style/HeaderView"
                android:text="@string/label_behavior" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:padding="0dp"
                android:stretchColumns="1">

                <TableRow>
                    <TextView
                        style="@style/TableLayoutLabel"
                        android:text="@string/label_distance_per_scroll" />

                    <SeekBar
                        style="@style/TableSeekBar"
                        android:id="@+id/DistanceSeekBar" />
                </TableRow>
                <TableRow>
                    <TextView
                        style="@style/TableLayoutLabel"
                        android:text="@string/label_strobe_fps" />

                    <SeekBar
                        style="@style/TableSeekBar"
                        android:id="@+id/StrobeFpsSeekBar"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>